--- a/configuration/cluster.yaml
+++ b/configuration/cluster.yaml
@@ -1,16 +1,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cluster-argo
-  namespace: openshift-gitops
+  name: demo-app
+  namespace: demo-app
 spec:
   destination:
-    namespace: default
+    namespace: demo-app
     server: https://kubernetes.default.svc
   project: default
   source:
     directory:
       recurse: true
-    path: cluster
-    repoURL: 
-    targetRevision: HEAD
+    path: app
+    repoURL: https://github.com/varodrig/demo-rh-tech-exchange-2023/
+    targetRevision: main
