--- a/configuration/app.yaml
+++ b/configuration/app.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: demo-app
-  namespace: demo-app
+  namespace: openshift-gitops
 spec:
   destination:
     namespace: demo-app
