--- a/configuration/app.yaml
+++ b/configuration/app.yaml
@@ -13,4 +13,4 @@ spec:
       recurse: true
     path: app
     repoURL: https://github.com/varodrig/demo-rh-tech-exchange-2023/
-    targetRevision: head
+    targetRevision: main
